--- a/assets/css/style.css.css
+++ b/assets/css/style.css.css
@@ -1,4 +1,3 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
 *{
     padding: 0;
     margin: 0;
@@ -270,3 +269,4 @@ main #links .link {
        border-radius: 5px;
        border: 1px solid black;
    }
+   /*# sourceMappingURL=style.css.map */
